--- a/Desktop/Projects/GameOn/backend/package.json
+++ b/Desktop/Projects/GameOn/backend/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.0.1",
+    "firebase-admin": "^13.4.0",
     "jsonwebtoken": "^9.0.2",
+    "nanoid": "^5.1.5",
     "pg": "^8.16.2"
   },
   "devDependencies": {
