--- a/Desktop/Projects/GameOn/frontend/package.json
+++ b/Desktop/Projects/GameOn/frontend/package.json
@@ -13,14 +13,17 @@
     "axios": "^1.9.0",
     "enhanced-resolve": "^5.18.2",
     "esbuild": "^0.25.5",
+    "firebase-admin": "^13.4.0",
     "lucide-react": "^0.523.0",
+    "nanoid": "^5.1.5",
     "picomatch": "^4.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "tailwind-scrollbar-hide": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
