--- a/Desktop/Projects/GameOn/.gitignore
+++ b/Desktop/Projects/GameOn/.gitignore
@@ -1,25 +1,24 @@
-# Logs
-logs
+# Node.js dependencies
+node_modules/
+
+# Local environment config
+.env
+.env.local
+.env.*.local
+
+# Firebase service keys
+serviceAccountKey.json
+
+# Database
+*.sqlite
+*.db
+*.sql
+
+# Build and logs
+dist/
+build/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# OS files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-*.env
+Thumbs.dbbackend/serviceAccountKey.json
