--- a/Desktop/Still/frontend/package.json
+++ b/Desktop/Still/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/poiret-one": "^5.2.6",
+    "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.0"
