--- a/Desktop/Projects/GameOn/database/package.json
+++ b/Desktop/Projects/GameOn/database/package.json
@@ -2,5 +2,9 @@
   "name": "database",
   "version": "1.0.0",
   "type": "module",
-  "description": "Database configuration for GameOn"
-} 
+  "description": "Database configuration for GameOn",
+  "dependencies": {
+    "dotenv": "^17.2.1",
+    "pg": "^8.16.3"
+  }
+}
