--- a/Desktop/Projects/GameOn/frontend/package.json
+++ b/Desktop/Projects/GameOn/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "enhanced-resolve": "^5.18.2",
     "esbuild": "^0.25.5",
     "firebase-admin": "^13.4.0",
